Fix scrollbar styling

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -55,27 +55,6 @@ header h1:first-child::first-letter {
   vertical-align: 4px;
 }
 
-* {
-  scrollbar-width: thin;
-  scrollbar-color: var(--secondary-color) var(--background-color);
-}
-
-*::-webkit-scrollbar {
-  width: 16px;
-  height: 4px;
-}
-
-*::-webkit-scrollbar-track {
-  background: var(--background-color);
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: var(--secondary-color);
-  height: 8px;
-  border-radius: 4px;
-  border: 4px solid var(--background-color);
-}
-
 tabula-alert {
   flex-grow: 1;
   justify-self: left;
